[package]
name = "k256-kit"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/k256-kit/blob/main/README.md"
repository = "https://github.com/ptechen/k256-kit.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "k256 kit"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsecp256k1 = "^0.7"
ecies = "^0.2"
thiserror = "1"
